# i18n

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.MIT  README.md  annotated.html  annotated_dup.js  classes.html  core_8hpp_source.html  dir_a3a25f94bdb0a978b32a898d0056368c.html  dir_a3a25f94bdb0a978b32a898d0056368c.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  i18n_8hpp_source.html  index.html  navtreedata.js  navtreeindex0.js  structI18n-members.html  structI18n.html  structI18n.js
.github/workflows/: doxygen  doxygen.yml
include/i18n/: core.hpp  i18n.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js
test/: CMakeLists.txt
test/src/: main.cpp
